Demo Section done!!

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header ul li a:hover {
 }
 
 .right {
-    width: 48%;
+    width: 47%;
 }
 
 .right img {
@@ -82,9 +82,10 @@ h2 {
 }
 
 p {
-    font-size: 1.2rem;
+    font-size: 1.05rem;
     color: var(--P-Desaturated-Blue);
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.05rem;
+    padding-right: 5em;
 }
 
 #hero input {
@@ -124,14 +125,69 @@ p {
 
 #demo {
     background-color: var(--Light-Grayish-Blue);
+    padding: 5em 0;
 }
 
 #demo .container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
+#demo button {
+    /* width: 30%; */
+    border: none;
+    border-bottom: 1px solid var(--A-Moderate-Cyan);
+    background-color: var(--Light-Grayish-Blue);
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: .4em 0;
+    cursor: pointer;
+}
+
+#demo button a {
+    color: var(--A-Moderate-Cyan);
+    text-decoration: none;
+    font-size: 1.1rem;
+    letter-spacing: .03em;
+    margin-right: .5em;
+}
+
+#demo .card {
+    background-color: white;
+    border-radius: 5px;
+    padding: 2em;
+    margin: 3em 0;
+    width: 60%;
+    box-shadow: 0 0 15px 0 rgb(230, 230, 240);
+}
+
+#demo .card p {
+    padding: 0;
+    font-size: .95rem;
+    line-height: 1.5rem;
+}
+
+.card .user {
+    font-size: .6rem;
+    line-height: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.card .user img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+
+.card .user h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
 
 .attribution { 
     font-size: 12px; 
