--- a/style.css
+++ b/style.css
@@ -189,6 +189,58 @@ p {
     font-weight: 700;
 }
 
+/* SignUp Section */
+#sign-up {
+    background-color: var(--P-Desaturated-Blue);
+    padding: 5em 0;
+}
+
+#sign-up .container {
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#sign-up .right {
+    width: 45%;
+}
+
+#sign-up p {
+    color: var(--Light-Grayish-Blue);
+    padding-right: 7em;
+}
+
+#sign-up form {
+    display: flex;
+    flex-direction: column;
+}
+
+#sign-up input {
+    width: 100%;
+    height: 3em;
+    border: none;
+    border-radius: 3px;
+    padding-left: 1em;
+    font-size: 1rem;
+}
+
+#sign-up input::placeholder {
+    color: var(--Light-Gray);
+}
+
+#sign-up button {
+    width: 40%;
+    height: 3em;
+    border: none;
+    border-radius: 3px;
+    font-size: 1rem;
+    background-color: var(--A-Bright-Blue);
+    color: var(--Light-Grayish-Blue);
+    margin-top: 1em;
+    cursor: pointer;
+}
+
 .attribution { 
     font-size: 12px; 
     text-align: center; 
