Change Logo color!!

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ p {
     color: var(--Light-Grayish-Blue);
     margin-left: 1em;
     cursor: pointer;
+    box-shadow: 3px 3px 5px 0 var(--Light-Gray);
 }
 
 /* Demo Section */
@@ -239,7 +240,16 @@ p {
     color: var(--Light-Grayish-Blue);
     margin-top: 1em;
     cursor: pointer;
+    box-shadow: 5px 5px 5px 0 hsl(239, 29%, 34%);
 }
+
+/* Contact Section */
+#contact {
+    background-color: var(--P-Very-Dark-Blue);
+    color: white;
+}
+
+
 
 .attribution { 
     font-size: 12px; 
