--- a/style.css
+++ b/style.css
@@ -246,17 +246,70 @@ p {
 /* Contact Section */
 #contact {
     background-color: var(--P-Very-Dark-Blue);
-    color: white;
 }
 
+#contact .container {
+    color: white;
+    padding: 5em 0;
+}
 
+#contact .links {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.links li {
+    list-style: none;
+    margin: 1em 0;
+    cursor: pointer;
+}
+
+.links #info li {
+    display: flex;
+    align-items: center;
+}
+
+.links #info li a {
+    margin-left: 1em;
+}
+
+.links #social {
+    display: flex;
+}
+
+#social li {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin: 1em;
+}
+
+#social li:hover {
+    background-color: white;
+    color: var(--P-Very-Dark-Blue);
+    border: none;
+}
+
+/* Footer section */
+footer {
+    background-color: #000;
+}
 
 .attribution { 
     font-size: 12px; 
     text-align: center; 
+    padding: 2em;
+    margin: 0;
+    color: white;
 }
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
     text-decoration: none;
+    font-weight: 700;
+    font-family: 'Raleway', sans-serif;
 }
