--- a/style.css
+++ b/style.css
@@ -34,7 +34,11 @@ header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 15vw;
+    height: 12vw;
+}
+
+header .logo img {
+    width: 90%;
 }
 
 header ul {
